--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
 
     //navigation
     navigationVersion = '2.4.0-alpha06'
+    nav_version = '2.5.3'
 
     themeVersion = '7c191eb4e6'
 }
