--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,32 +32,18 @@ dependencies {
     /** HILT */
     implementation "com.google.dagger:hilt-android:$hiltVersion"
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0" // hiltViewModel
 
     /** compose */
     def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
     implementation composeBom
     androidTestImplementation composeBom
     implementation 'androidx.compose.ui:ui' //없으면 @Composable import 안됨
-    implementation 'androidx.compose.material:material' //없으면 Text("Hello") 안됨
     implementation 'androidx.compose.ui:ui-tooling-preview' // Android Studio Preview support
     debugImplementation 'androidx.compose.ui:ui-tooling'
-    implementation 'androidx.compose.material3:material3' //JetNews Main 따라하기
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha10' //JetNews Main 따라하기
     implementation "androidx.compose.material3:material3-window-size-class"
     implementation "androidx.navigation:navigation-compose:$nav_version"
-
-    /** compose */
-    /*
-    def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
-    implementation composeBom
-    androidTestImplementation composeBom
-    implementation 'androidx.compose.ui:ui' //없으면 @Composable import 안됨
-    implementation 'androidx.compose.material:material' //없으면 Text("Hello") 안됨
-    implementation 'androidx.compose.ui:ui-tooling-preview' // Android Studio Preview support
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    implementation 'androidx.compose.material3:material3' //JetNews Main 따라하기
-    implementation "androidx.compose.material3:material3-window-size-class"
-    def nav_version = "2.5.3"
-    implementation "androidx.navigation:navigation-compose:$nav_version"*/
 
     implementation project(path: ':library')
     implementation "com.github.sarang628:Theme:$themeVersion"
