--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "app/src/main/java/com/sarang/torang/di/pinchzoom"]
 	path = app/src/main/java/com/sarang/torang/di/pinchzoom
 	url = https://github.com/sarang628/pinchzoom.git
+[submodule "app/src/main/java/com/sarang/torang/di/torang_database_di"]
+	path = app/src/main/java/com/sarang/torang/di/torang_database_di
+	url = https://github.com/sarang628/torang_database_di.git
+[submodule "app/src/main/java/com/sarang/torang/di/torang_network_di"]
+	path = app/src/main/java/com/sarang/torang/di/torang_network_di
+	url = https://github.com/sarang628/torang_network_di.git
