update toml location

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "gradle/TorangToml"]
-	path = gradle/TorangToml
+[submodule "TorangToml"]
+	path = TorangToml
 	url = https://github.com/sarang628/TorangToml.git
 [submodule "app/src/main/java/com/sarang/torang/di/filter_di"]
 	path = app/src/main/java/com/sarang/torang/di/filter_di
